<resources>
    <string name="app_name">家族ダイアリー</string>
    <string name="input_label">今日の日記</string>
    <string name="kibun_label0">さいこう！</string>
    <string name="kibun_label1">いいね〜</string>
    <string name="kibun_label2">まあまあ</string>
    <string name="kibun_label3">う〜ん</string>
    <string name="kibun_label4">さいあく…</string>
    <string name="send_kibun_text_label">これでおくる</string>
    <string name="send_kibun_complete">今日の気分を送信しました！</string>
    <string name="sign_up_by_mail_title">メールアドレスで登録</string>
    <string name="sign_up_by_tel_title">電話番号で登録 or ログイン</string>
    <string name="register_label">登録する</string>
    <string name="authentication_label">認証する</string>
    <string name="to_mail_login_label"><u>Eメールログイン画面へ</u></string>
    <string name="email_login_title">Eメールアドレスでログイン</string>
    <string name="login_label">ログイン</string>
    <string name="forgot_password_label"><u>パスワードを忘れた方</u></string>
    <string name="to_registration_label"><u>新規登録画面へ</u></string>
    <string name="reset_password_title">パスワードリセット</string>
    <string name="send_mail_label">メールを送る</string>
    <string name="family_diary_verificationId">Family_diary_verification_id</string>
    <string name="sms_send_complete_label">SMSで届いた認証コードを入力してください</string>
    <string name="registration_or_login_button">登録 or ログイン</string>
    <string name="send_complete_reset_password_label">パスワードリセットメールを送りました</string>
    <string name="other_title">せってい</string>
    <string name="add_family_label">家族を追加する</string>
    <string name="view_family_label">家族リストをみる</string>
    <string name="change_profile_label">プロフィールを変更する</string>
    <string name="logout_label">ログアウトする</string>
    <string name="profile_change_label">保存する</string>
    <string name="profile_change_complete_label">プロフィールを更新しました</string>
    <string name="search_label">検索</string>
    <string name="add_family_button_label">家族に追加する</string>
    <string name="send_my_user_id_button_label">自分のIDを送る</string>
    <string name="my_own_user_id_label">自分のユーザーIDです</string>
    <string name="send_my_user_id_label">自分のユーザーID</string>
    <string name="add_family_complete_text">を家族に追加しました!</string>
    <string name="view_family_list_title">家族リスト</string>
    <string name="runaway_button_label">家出する(家族解除)</string>
    <string name="no_family">まだ家族が1人もいません</string>
    <string name="no_diary">誰も日記を書いていません</string>
    <string name="device_Token_key">Family_diary_device_token_key</string>
    <string name="family_diary_input_kibun_text">Family_diary_input_kibun_text</string>
    <string name="comment_label">コメント</string>
    <string name="comment_send_button">送る</string>

    <!-- カレンダーラベル用 -->
    <string name="material_calendar_monday">月</string>
    <string name="material_calendar_tuesday">火</string>
    <string name="material_calendar_wednesday">水</string>
    <string name="material_calendar_thursday">木</string>
    <string name="material_calendar_friday">金</string>
    <string name="material_calendar_saturday">土</string>
    <string name="material_calendar_sunday">日</string>

    <array name="material_calendar_months_array">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </array>
</resources>
