<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backGround"
        android:gravity="center_horizontal"
        android:focusableInTouchMode="true"
        android:orientation="vertical">
        <TextView
            android:id="@+id/sign_up_by_mail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:text="@string/reset_password_title"
            android:textColor="@color/text"
            android:textSize="20sp" />
        <EditText
            android:id="@+id/mail_input"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:padding="20dp"
            android:layout_marginBottom="6dp"
            android:maxLines="1"
            android:hint="メールアドレス"
            android:textColor="@color/text"
            android:inputType="textEmailAddress"
            android:background="@drawable/round_border_radius_30" />
        <!-- メール送信ボタン -->
        <Button
            android:id="@+id/send_mail"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:text="@string/send_mail_label"
            android:clickable="false"
            android:background="@drawable/shape_rounded_corners_disabled_30dp" />
        <TextView
            android:id="@+id/to_mail_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_mail_login_label"
            android:textSize="16dp"
            android:textColor="@color/text" />
        <TextView
            android:id="@+id/send_complete_password_reset_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_complete_reset_password_label"
            android:textSize="16sp"
            android:textColor="@color/sub_text"
            android:layout_marginTop="24dp"
            android:visibility="gone" />
    </LinearLayout>
</layout>